--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
 *{
   font-family: 'Montserrat', sans-serif;
 }
+* a{
+  text-decoration: none;
+  color: inherit;
+}
 
 .nav-item a{
   color: inherit;
@@ -53,7 +57,8 @@
   color: var(--light);
 }
 .rounded-5{
-  border-radius: 10px;
+  border-radius: 15px;
+  overflow: hidden;
 }
 .fs-7{
   font-size: 14px;
@@ -94,4 +99,17 @@ footer .container .row .col li{
 }
 .footer-link{
   color: inherit;
+}
+.h-third{
+  height: 70vh;
+  overflow: hidden;
+}
+.h-half{
+  height: 50%;
+  overflow: hidden;
+}
+.fit{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
 }
